trunk/Archive2/7f/a8ce4bd5797338/output
main.cpp: In function 'std::unique_ptr<_Tp> make_unique(U&&)':
main.cpp:13:35: error: expected primary-expression before '<<' token
     std::cout << type_id(u).name; << std::endl;
                                   ^
main.cpp: In instantiation of 'std::unique_ptr<_Tp> make_unique(U&&) [with T = A; U = int]':
main.cpp:19:45:   required from here
main.cpp:13:27: error: 'type_id' was not declared in this scope
     std::cout << type_id(u).name; << std::endl;
                           ^
